﻿w17 18.12.2015 13:24:46 +0300 - build 4480

1. Experimental: M#1910: "Add to archive" hotkey does not wok in Temporary Panel.

drkns 17.12.2015 21:32:47 +0200 - build 4479

1. Уточнение 4473: Selection при отсутствии блока берёт всю строку.

drkns 17.12.2015 20:56:42 +0200 - build 4478

1. User menu, состоящее из одних разделителей (коварство пользователей не знает границ), приводило к AV.

zg 16.12.2015 22:53:06 +0200 - build 4477

1. assert при вводе alt-65536 в редакторе.

drkns 16.12.2015 20:53:34 +0200 - build 4476

1. И ещё одно уточнение 4473.

drkns 16.12.2015 19:48:28 +0200 - build 4475

1. Продолжение 4473, учтём пожелания телезрителей.

drkns 16.12.2015 11:48:50 +0200 - build 4474

1. Уточнение 4473.

drkns 16.12.2015 00:42:39 +0200 - build 4473

1. Опция Editor settings - [x] Pick up the word удалена.
   Вместо неё теперь кнопки [ Word ] и [ Selection ] прямо в диалоге поиска, вставляющие в строку то, что на них написано.
   Selection берёт только первую строку блока. При отсутствии блока берёт слово.

2. DlgBuilder неправильно рассчитывал вертикальные координаты при наличии двух колонок разной высоты.

3. Рефакторинг.

drkns 12.12.2015 18:50:14 +0200

1. Весь исходный код теперь в utf-8.

2. Добавим include guards в *.hpp, т.к. gcc не может в #pragma once в файлах с BOM. /o

drkns 12.12.2015 15:41:11 +0200 - build 4472

1. С форума: Если убрать типы дисков (Ctrl-1), то не будет убирать subst диск кнопкой del.

drkns 11.12.2015 22:58:53 +0200 - build 4471

1. 0003131: Пропадают галочки напротив отмеченных в меню "Используя кодовую страницу" кодировок

drkns 11.12.2015 22:02:06 +0200 - build 4470

1. С форума: если в строке поиска была задана только одна группа, то в строке замены следует считать метасимоволами подстроки до $1

drkns 11.12.2015 21:24:01 +0200 - build 4469

1. Падение при замене с регексами.

drkns 09.12.2015 20:28:43 +0200 - build 4468

1. debug & gcc.

2. syslog & gcc.

drkns 08.12.2015 00:25:17 +0200 - build 4467

1. Рефакторинг.
