@@ -1,4 +1,8 @@
-﻿w17 18.12.2015 13:24:46 +0300 - build 4480
+﻿drkns 18.12.2015 19:39:04 +0200 - build 4481
+
+1. И ещё одно уточнение 4473.
+
+w17 18.12.2015 13:24:46 +0300 - build 4480
 
 1. Experimental: M#1910: "Add to archive" hotkey does not wok in Temporary Panel.
 
